alteração do portifolio, usando variaveis css

--- a/portifolio/v1/index.html
+++ b/portifolio/v1/index.html
@@ -27,7 +27,7 @@
                 <a class="apresentacao__links__link" href="https://github.com/nicole-bauchspiess">GitHub</a>
             </div>
         </section>
-        <img src="20220910_191945.jpg" alt="imagem Nicole Bauchspiess">
+        <img src="./images/20220910_191945.jpg" alt="imagem Nicole Bauchspiess">
 
         </main>
 
